--- a/main.kv
+++ b/main.kv
@@ -1,33 +1,50 @@
-<ClickableTextFieldRound>:
-    size_hint_y: None
-    height: text_field.height
-
-    MDTextField:
-        id: text_field
-        hint_text: root.hint_text
-        text: root.text
-        password: True
-        icon_left: "key-variant"
-
-    MDIconButton:
-        icon: "eye-off"
-        pos_hint: {"center_y": .5}
-        pos: text_field.width - self.width + dp(8), 0
-        theme_text_color: "Hint"
-        on_release:
-            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
-            text_field.password = False if text_field.password is True else True
-
-
-MDScreen:
-
-    ClickableTextFieldRound:
-        size_hint_x: None
-        width: "300dp"
-        hint_text: "Password"
-        pos_hint: {"center_x": .5, "center_y": .5}
+Screen:
+    MDCard:
+        size_hint: None, None
+        size: 300,400
+        pos_hint: {'center_x': 0.5,'center_y': 0.5}
+        elevation: 5
+        padding: 25
+        spacing: 25
+        orientation: 'vertical'
     
-    MDTextField:
-        hint_text: "Email"
-        helper_text: "user@gmail.com"
-        validator: "email"
+        MDLabel:
+            id: welcome_label
+            text: "WELCOME"
+            font_size: 40
+            halign:'center'
+            size_hint_y: None
+            height: self.texture_size[1]
+            padding_y: 15
+        
+        MDTextField:
+            id: user
+            icon_right: 'account'
+            hint_text: 'username'
+            size_hint_x: None
+            width: 200
+            font_size: 18
+            pos_hint: {"center_x":0.5}
+        
+        MDTextField:
+            id: password
+            icon_right: 'eye-off'
+            hint_text: 'password'
+            size_hint_x: None
+            width: 200
+            font_size: 18
+            pos_hint: {"center_x":0.5}
+            password: True
+        
+        MDRoundFlatButton:
+            text:'LOGIN'
+            font_size:12
+            pos_hint: {"center_x":0.5}
+            on_press: app.login()
+        
+        MDRoundFlatButton:
+            text:'CLEAR'
+            font_size:12
+            pos_hint: {"center_x":0.5}
+            on_press: app.clear()
+        
